update logo and color scheme

--- a/index.html
+++ b/index.html
@@ -447,8 +447,8 @@
   <body>
     <style>
       :root {
-        --link-color: #296281;
-        --link-hover-color: #56BCBF;
+        --link-color: #142f64;
+        --link-hover-color: #1f99d6;
       }
     </style>
     <!-- Our application root element -->
@@ -456,7 +456,7 @@
       <b-container style="margin-top:20px;">
         <b-row align-v="end">
           <b-col cols="9">
-            <a @click="gotoHome"><img src="artwork/logo_motor_option3.png" class="d-inline-block" alt="datalad" style="width:100%;"></a>
+            <a @click="gotoHome"><img src="artwork/sfb_catalog_logo.svg" class="d-inline-block" alt="datalad" style="width:100%;"></a>
           </b-col>
           <b-col cols="1"></b-col>
           <b-col cols="2" align-h="end">
